# sqlite-mc-uuid

./: CMakeLists.txt  README.md  flake.nix  library.cpp
